exam-code/istio/frontend-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-destination
  namespace: default
spec:
  host: frontend-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
